src/snapshots/hemlis_lib__lexer__tests__weird_comment5.snap
---
source: src/lexer.rs
expression: "p(\"a\\n--# comment\\nb\")"
---
Ok(Lower("a"))
Ok(LayTop)
Ok(Lower("b"))
Ok(LayTop)
