src/snapshots/hemlis_lib__lexer__tests__weird_comments.snap
---
source: src/lexer.rs
expression: "p(r#\"\n            -- comment\n            --+ comment\n            --| comment\n            --# comment\n            --@@@@ comment\n        \"#)"
---
Ok(LayTop)
